132) kernel: net: ipv6: select fragment id during UFO segmentation if not set.<br>
133) kernel: net: ipv6: fix fragment id assignment on LE arches.<br>
134) kernel: net: ipv6: call ipv6_proxy_select_ident instead of ipv6_select_ident in udp6_ufo_fragment.<br>
135) kernel: net: ipv6: RTAX_FEATURE_ALLFRAG causes inefficient TCP segment sizing.<br>
136) kernel: net: ipv6: fix IPv6 UDP fragmentation issue.<br>
137) kernel: net: ipv6: nf_conntrack_ipv6: fix tracking of ICMPv6 error messages containing fragments.<br>
<br>
<br>
<b>3.7.x</b><br>
1) add 7621+7602+7612_USB_SD_SIM_16_512 metal sample support.<br>
2) coovachilli: up to version 1.3.1.3 (commit: 98845a84).<br>
3) xl2tpd: sync with devel tree 26 Nov 2015.<br>
4) kernel: mips: fix highmem crash in __update_cache.<br>
5) kernel: mips: revert: make CAC_ADDR and UNCAC_ADDR account for PHYS_OFFSET.<br>
6) kernel: mips: revert: HIGHMEM fixes for cache aliasing and non-DMA I/O.<br>
7) kernel: mips: revert: adjust mips highmem offset to avoid the need for -mlong-calls on systems with >256M RAM.<br>
8) kernel: mips: autodetect memsize not support high memory (limit detect to 448Mb on mips boards).<br>
9) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
10) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
4) in very far future: need add in firewall support xt_time matches for parental control.<br>
5) in very far future: need add perip shaper script and webui .<br>
6) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
7) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>