@@ -55,7 +55,13 @@ CONFIG_PCIE_PORT2=y
 # CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
-CONFIG_RAM_SIZE_AUTO=y
+# CONFIG_RT2880_DRAM_16M is not set
+# CONFIG_RT2880_DRAM_32M is not set
+# CONFIG_RT2880_DRAM_64M is not set
+# CONFIG_RT2880_DRAM_128M is not set
+# CONFIG_RT2880_DRAM_256M is not set
+CONFIG_RT2880_DRAM_512M=y
+CONFIG_RALINK_RAM_SIZE=512
 CONFIG_RT2880_UART_57600=y
 # CONFIG_RT2880_UART_115200 is not set
 CONFIG_RALINK_UART_BRATE=57600
@@ -130,7 +136,7 @@ CONFIG_MIPS_CMP=y
 CONFIG_MIPS_GIC_IPI=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
 CONFIG_CPU_HAS_SYNC=y
-# CONFIG_HIGHMEM is not set
+CONFIG_HIGHMEM=y
 CONFIG_CPU_SUPPORTS_HIGHMEM=y
 CONFIG_SYS_SUPPORTS_HIGHMEM=y
 CONFIG_ARCH_FLATMEM_ENABLE=y
