@@ -55,7 +55,6 @@ CONFIG_PCIE_PORT2=y
 # CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
-CONFIG_RAM_SIZE_AUTO=y
 CONFIG_RT2880_UART_57600=y
 # CONFIG_RT2880_UART_115200 is not set
 CONFIG_RALINK_UART_BRATE=57600
